@@ -777,16 +777,17 @@ $Id$
 
       Reason = "NONE" / "TORPROTOCOL" / "INTERNAL" / "REQUESTED" /
                "HIBERNATING" / "RESOURCELIMIT" / "CONNECTFAILED" /
-               "OR_IDENTITY" / "OR_CONN_CLOSED"
+               "OR_IDENTITY" / "OR_CONN_CLOSED" / "TIMEOUT" /
+               "FINISHED" / "DESTROYED" / "NOPATH" / "NOSUCHSERVICE"
 
    The path is provided only when the circuit has been extended at least one
    hop.
 
    The "REASON" field is provided only for FAILED and CLOSED events, and only
    if extended events are enabled (see 3.19).  Clients MUST accept reasons
-   not listed above.
+   not listed above.  Reasons are as given in tor-spec.txt, except for:
 
-   [XXXX Explain what the reasons mean.]
+      NOPATH          (Not enough nodes to make circuit)
 
 4.1.2. Stream status changed
 
